# MeshViewer

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
models/: ModelChecker.cpp
src/: Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  imgui.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp  main.cpp
src/shader/: LightCube.vert  Phong.frag  Phong.vert  basic.frag  basic.vert  depth.vert
